# grpc-helloword

./: .dockerignore  .pre_commit_config.yaml  Cargo.toml  Dockerfile  docker-compose.yaml  hook.yaml  server.env
proto/: hello.proto
src/: client.rs  diesel-test.rs  postgres-test.rs  server.rs
