[package]
name = "grpc-helloword"
version = "0.1.0"
authors = ["bobrolov <35232149+bobrolov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[[bin]]
name = "postgres-test"
path = "src/postgres-test.rs"

[dependencies]
log = "0.4.14"
simple_logger = "1.11.0"
tonic = "0.4.3"
prost = "0.7.0"
tokio = {version = "1.5.0", features = ["macros", "rt-multi-thread"]}
tokio-postgres = "0.7.2"
postgres = "0.19.1"
chrono = "0.4.19"
async-trait = "0.1.50"

[build-dependencies]
tonic-build = "0.4.2"

